--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@reference bg-background;
+@reference text-foreground;
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
+  @apply bg-background text-foreground;
   font-family: Arial, Helvetica, sans-serif;
+  font-feature-settings: "rlig" 1, "calt" 1;
 }
 
 @layer utilities {
@@ -86,9 +91,6 @@ body {
 
 @layer base {
   * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
+    @apply ;
   }
 }
